--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -31,6 +31,10 @@
       margin-right: 3rem;
       margin-top: 0.5rem;
 
+      @media (max-width: 1024px) {
+        margin: 0;
+      }
+
       path {
         fill: #fff;
       }
