--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -31,7 +31,7 @@
     left: 0;
     display: none;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     flex-direction: column;
     text-align: center;
 
